// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReferralsConfirmationSelection should render component with props and loading 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        This app has requested to 
        read
         ‘Referral’ data. Before installation please select the referral types that this app will have access to. This defaults to ‘All Referral Types’, unless selected below.
      </p>
      <div
        class="mocked-styled-135 el-input-wrap-full"
      >
        <div
          class="el-mb5 el-input-group"
        >
          <input
            aria-label="Input type checkbox"
            checked=""
            class="mocked-styled-38 el-input"
            id="test-static-id"
            type="checkbox"
          />
          <label
            class="mocked-styled-41 el-label"
            for="test-static-id"
          >
            Install for selected referrals only
          </label>
        </div>
      </div>
      <div
        class="mocked-styled-135 el-input-wrap-full"
      >
        <div
          class="mocked-styled-44 el-loader-container"
        >
          <div
            class="mocked-styled-46 el-loader"
          >
            <div
              class="mocked-styled-47 el-loader-moving-bar"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <p
      class="el-text-base el-body-text el-has-grey-text"
    >
      This app has requested to 
      read
       ‘Referral’ data. Before installation please select the referral types that this app will have access to. This defaults to ‘All Referral Types’, unless selected below.
    </p>
    <div
      class="mocked-styled-135 el-input-wrap-full"
    >
      <div
        class="el-mb5 el-input-group"
      >
        <input
          aria-label="Input type checkbox"
          checked=""
          class="mocked-styled-38 el-input"
          id="test-static-id"
          type="checkbox"
        />
        <label
          class="mocked-styled-41 el-label"
          for="test-static-id"
        >
          Install for selected referrals only
        </label>
      </div>
    </div>
    <div
      class="mocked-styled-135 el-input-wrap-full"
    >
      <div
        class="mocked-styled-44 el-loader-container"
      >
        <div
          class="mocked-styled-46 el-loader"
        >
          <div
            class="mocked-styled-47 el-loader-moving-bar"
          />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ReferralsConfirmationSelection should render component with props with data 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        This app has requested to 
        read
         ‘Referral’ data. Before installation please select the referral types that this app will have access to. This defaults to ‘All Referral Types’, unless selected below.
      </p>
      <div
        class="mocked-styled-135 el-input-wrap-full"
      >
        <div
          class="el-mb5 el-input-group"
        >
          <input
            aria-label="Input type checkbox"
            checked=""
            class="mocked-styled-38 el-input"
            id="test-static-id"
            type="checkbox"
          />
          <label
            class="mocked-styled-41 el-label"
            for="test-static-id"
          >
            Install for selected referrals only
          </label>
        </div>
      </div>
      <div
        class="mocked-styled-135 el-input-wrap-full"
      >
        <div
          class="mocked-styled-58 el-multi-select-input-wrapper"
        >
          <input
            class="mocked-styled-57 el-multi-select-input"
            id="select-referrals-to-install"
          />
          <div
            aria-label="Multi selected options"
            class="el-mb7 el-multi-select-selected"
            role="listbox"
          >
            <span
              class="el-ml2 el-intent-default el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                title="Icon image with name task"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4 11a1 1 0 1 0 0 2 1 1 0 0 0 0-2m0-4a1 1 0 1 0 0-2 1 1 0 0 0 0 2m0 10a1 1 0 1 0 0 2 1 1 0 0 0 0-2m16-6H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2M8 7h12a1 1 0 1 0 0-2H8a1 1 0 0 0 0 2m12 10H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2"
                  fill="currentColor"
                />
              </svg>
            </span>
            <p>
              Select at least one referral or un-tick the above checkbox to select all
            </p>
          </div>
          <div
            aria-label="Multi unselected options"
            class="el-mb7 el-multi-select-un-selected"
            role="listbox"
          >
            <input
              aria-checked="false"
              aria-hidden="true"
              class="mocked-styled-52 el-multi-select-checkbox"
              id="test-static-id"
              role="option"
              type="checkbox"
            />
            <label
              class="el-has-grey-chips el-multi-select-label"
              for="test-static-id"
              role="option"
              tabindex="0"
            >
              JTS - Testimonial
            </label>
            <input
              aria-checked="false"
              aria-hidden="true"
              class="mocked-styled-52 el-multi-select-checkbox"
              id="test-static-id"
              role="option"
              type="checkbox"
            />
            <label
              class="el-has-grey-chips el-multi-select-label"
              for="test-static-id"
              role="option"
              tabindex="0"
            >
              JRV - Removals
            </label>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <p
      class="el-text-base el-body-text el-has-grey-text"
    >
      This app has requested to 
      read
       ‘Referral’ data. Before installation please select the referral types that this app will have access to. This defaults to ‘All Referral Types’, unless selected below.
    </p>
    <div
      class="mocked-styled-135 el-input-wrap-full"
    >
      <div
        class="el-mb5 el-input-group"
      >
        <input
          aria-label="Input type checkbox"
          checked=""
          class="mocked-styled-38 el-input"
          id="test-static-id"
          type="checkbox"
        />
        <label
          class="mocked-styled-41 el-label"
          for="test-static-id"
        >
          Install for selected referrals only
        </label>
      </div>
    </div>
    <div
      class="mocked-styled-135 el-input-wrap-full"
    >
      <div
        class="mocked-styled-58 el-multi-select-input-wrapper"
      >
        <input
          class="mocked-styled-57 el-multi-select-input"
          id="select-referrals-to-install"
        />
        <div
          aria-label="Multi selected options"
          class="el-mb7 el-multi-select-selected"
          role="listbox"
        >
          <span
            class="el-ml2 el-intent-default el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name task"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 11a1 1 0 1 0 0 2 1 1 0 0 0 0-2m0-4a1 1 0 1 0 0-2 1 1 0 0 0 0 2m0 10a1 1 0 1 0 0 2 1 1 0 0 0 0-2m16-6H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2M8 7h12a1 1 0 1 0 0-2H8a1 1 0 0 0 0 2m12 10H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2"
                fill="currentColor"
              />
            </svg>
          </span>
          <p>
            Select at least one referral or un-tick the above checkbox to select all
          </p>
        </div>
        <div
          aria-label="Multi unselected options"
          class="el-mb7 el-multi-select-un-selected"
          role="listbox"
        >
          <input
            aria-checked="false"
            aria-hidden="true"
            class="mocked-styled-52 el-multi-select-checkbox"
            id="test-static-id"
            role="option"
            type="checkbox"
          />
          <label
            class="el-has-grey-chips el-multi-select-label"
            for="test-static-id"
            role="option"
            tabindex="0"
          >
            JTS - Testimonial
          </label>
          <input
            aria-checked="false"
            aria-hidden="true"
            class="mocked-styled-52 el-multi-select-checkbox"
            id="test-static-id"
            role="option"
            type="checkbox"
          />
          <label
            class="el-has-grey-chips el-multi-select-label"
            for="test-static-id"
            role="option"
            tabindex="0"
          >
            JRV - Removals
          </label>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ReferralsConfirmationSelection should render component with read and write with both scopes on app 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        This app has requested to 
        read and write
         ‘Referral’ data. Before installation please select the referral types that this app will have access to. This defaults to ‘All Referral Types’, unless selected below.
      </p>
      <div
        class="mocked-styled-135 el-input-wrap-full"
      >
        <div
          class="el-mb5 el-input-group"
        >
          <input
            aria-label="Input type checkbox"
            checked=""
            class="mocked-styled-38 el-input"
            id="test-static-id"
            type="checkbox"
          />
          <label
            class="mocked-styled-41 el-label"
            for="test-static-id"
          >
            Install for selected referrals only
          </label>
        </div>
      </div>
      <div
        class="mocked-styled-135 el-input-wrap-full"
      >
        <div
          class="mocked-styled-58 el-multi-select-input-wrapper"
        >
          <input
            class="mocked-styled-57 el-multi-select-input"
            id="select-referrals-to-install"
          />
          <div
            aria-label="Multi selected options"
            class="el-mb7 el-multi-select-selected"
            role="listbox"
          >
            <span
              class="el-ml2 el-intent-default el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                title="Icon image with name task"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4 11a1 1 0 1 0 0 2 1 1 0 0 0 0-2m0-4a1 1 0 1 0 0-2 1 1 0 0 0 0 2m0 10a1 1 0 1 0 0 2 1 1 0 0 0 0-2m16-6H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2M8 7h12a1 1 0 1 0 0-2H8a1 1 0 0 0 0 2m12 10H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2"
                  fill="currentColor"
                />
              </svg>
            </span>
            <p>
              Select at least one referral or un-tick the above checkbox to select all
            </p>
          </div>
          <div
            aria-label="Multi unselected options"
            class="el-mb7 el-multi-select-un-selected"
            role="listbox"
          >
            <input
              aria-checked="false"
              aria-hidden="true"
              class="mocked-styled-52 el-multi-select-checkbox"
              id="test-static-id"
              role="option"
              type="checkbox"
            />
            <label
              class="el-has-grey-chips el-multi-select-label"
              for="test-static-id"
              role="option"
              tabindex="0"
            >
              JTS - Testimonial
            </label>
            <input
              aria-checked="false"
              aria-hidden="true"
              class="mocked-styled-52 el-multi-select-checkbox"
              id="test-static-id"
              role="option"
              type="checkbox"
            />
            <label
              class="el-has-grey-chips el-multi-select-label"
              for="test-static-id"
              role="option"
              tabindex="0"
            >
              JRV - Removals
            </label>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <p
      class="el-text-base el-body-text el-has-grey-text"
    >
      This app has requested to 
      read and write
       ‘Referral’ data. Before installation please select the referral types that this app will have access to. This defaults to ‘All Referral Types’, unless selected below.
    </p>
    <div
      class="mocked-styled-135 el-input-wrap-full"
    >
      <div
        class="el-mb5 el-input-group"
      >
        <input
          aria-label="Input type checkbox"
          checked=""
          class="mocked-styled-38 el-input"
          id="test-static-id"
          type="checkbox"
        />
        <label
          class="mocked-styled-41 el-label"
          for="test-static-id"
        >
          Install for selected referrals only
        </label>
      </div>
    </div>
    <div
      class="mocked-styled-135 el-input-wrap-full"
    >
      <div
        class="mocked-styled-58 el-multi-select-input-wrapper"
      >
        <input
          class="mocked-styled-57 el-multi-select-input"
          id="select-referrals-to-install"
        />
        <div
          aria-label="Multi selected options"
          class="el-mb7 el-multi-select-selected"
          role="listbox"
        >
          <span
            class="el-ml2 el-intent-default el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name task"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 11a1 1 0 1 0 0 2 1 1 0 0 0 0-2m0-4a1 1 0 1 0 0-2 1 1 0 0 0 0 2m0 10a1 1 0 1 0 0 2 1 1 0 0 0 0-2m16-6H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2M8 7h12a1 1 0 1 0 0-2H8a1 1 0 0 0 0 2m12 10H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2"
                fill="currentColor"
              />
            </svg>
          </span>
          <p>
            Select at least one referral or un-tick the above checkbox to select all
          </p>
        </div>
        <div
          aria-label="Multi unselected options"
          class="el-mb7 el-multi-select-un-selected"
          role="listbox"
        >
          <input
            aria-checked="false"
            aria-hidden="true"
            class="mocked-styled-52 el-multi-select-checkbox"
            id="test-static-id"
            role="option"
            type="checkbox"
          />
          <label
            class="el-has-grey-chips el-multi-select-label"
            for="test-static-id"
            role="option"
            tabindex="0"
          >
            JTS - Testimonial
          </label>
          <input
            aria-checked="false"
            aria-hidden="true"
            class="mocked-styled-52 el-multi-select-checkbox"
            id="test-static-id"
            role="option"
            type="checkbox"
          />
          <label
            class="el-has-grey-chips el-multi-select-label"
            for="test-static-id"
            role="option"
            tabindex="0"
          >
            JRV - Removals
          </label>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
